delFlag字段修正